nats-micro/tests/ui/service_error_invalid_kind_empty.rs
use nats_micro::service_error;

#[service_error]
pub enum DemoError {
    #[kind("")]
    #[error("bad")]
    Bad,
}

fn main() {}
